--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-section{
-    background-color: aliceblue;
-    position: sticky;
-    top: 0;
+*{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
